--- a/views/solicitar-servico-eletricista.ejs
+++ b/views/solicitar-servico-eletricista.ejs
@@ -37,7 +37,7 @@
                       </div> 
                     </div>
                         <div class="formulario-solicitacao">
-                          <form action="/solicitar-servico-eletricista" method="POST">
+                          <form class="cadform" action="/solicitar-servico-eletricista" method="POST">
                             <section >
                               <div>
                                 <label>TIPO DE RESIDÊNCIA</label><br>
@@ -67,8 +67,9 @@
                             </section>              
                             <section class ="caixa-dialogo">
                               <label for="caixa-dialogo">Descrição da Solicitação</label>
-                              <textarea id="caixa-dialogo" name="descricao_solicitacao" rows="10" cols="100%" placeholder="Detalhe sua solicitação aqui" minlength="50" maxlength="240" required = "required" oninvalid="this.setCustomValidity('Descrição deve conter entre 50 e 240 caractéres')" 
-                              onchange="try{setCustomValidity('')}catch(e){}" ></textarea> 
+                              <textarea id="caixa-dialogo" name="descricao_solicitacao" rows="10" cols="100%" placeholder="Detalhe sua solicitação aqui" minlength="50" maxlength="240" 
+                              required = "required" oninvalid="this.setCustomValidity('Descrição deve conter entre 50 e 240 caractéres')" 
+                              onchange="try{setCustomValidity('')}catch(e){}"></textarea> 
                             </section >
                             <div class="botaoServico">
                               <button type="submit" class="btn btn-enviar">Enviar</button>
