--- a/views/cadastro-tomador-servico.ejs
+++ b/views/cadastro-tomador-servico.ejs
@@ -9,6 +9,15 @@
       <h3>
         Agora que você nos contou o que precisa, confirme seus dados para te conectarmos aos melhores profissionais 
       </h3>
+      <% if (errors && typeof errors !== 'undefined') { %>
+        <div class="alert alert-danger" role="alert">
+          <div style="text-align: center; ">
+            <% errors.errors.forEach(error => { %>
+              <strong><%= error.msg %></strong><br>
+            <% }); %>
+          </div>
+        </div>
+      <% } %>
       <div class="formulario-cadastro">
         <div>
           <form class="cadform" method="POST" action="/cadastro-tomador-servico">
@@ -23,9 +32,6 @@
             </div>
             <div class="form-group">
               <input class="form-control" type="text" id="cpf" placeholder="CPF" name="cpf" maxlength="11" >
-            </div>
-            <div class="form-group">
-              <input class="form-control" type="tel" id="telefone" placeholder="Telefone/Whatsapp com DDD" name="telefone"   maxlength="11" > 
             </div>
             <div class="form-group">
               <input class="form-control" type="text" id="endereco" placeholder="Rua Santo, Bairro Fulano, n 38, apt 301, Belo Horizonte, MG, cep 30140072" name="endereco" > 
