fix: rota criar prestador

--- a/views/dashboard-servicos-prestador.ejs
+++ b/views/dashboard-servicos-prestador.ejs
@@ -10,7 +10,7 @@
         <div>
           <h1 class="title-h1">PRESTADOR DE SERVIÇO</h1>
           <h2 class="title-h2">
-            Confira abaixo a situação dos serviços que foram aceitados por você
+            Confira abaixo a situação dos serviços que foram aceitos por você
           </h2>
         </div>
       </section>
