chore: adjust pages

--- a/views/para-profissional.ejs
+++ b/views/para-profissional.ejs
@@ -36,7 +36,7 @@
             </li>
             <li>
               <div class="text">
-                <span>Após a concretização do pedido, todo o dinheiro pago pelo seu cliente vai direto para o seu bolso, não cobramos nenhuma taxa</span>
+                <span>Após aprovação do orçamento, o seu cliente entrará em contato com você pelo Whatsapp para combinar os detalhes e todo o dinheiro pago por ele, vai direto para o seu bolso, não cobramos nenhuma taxa</span>
               </div>
               <div class="icon">
                 <h3>
