--- a/views/para-quem-contrata.ejs
+++ b/views/para-quem-contrata.ejs
@@ -41,7 +41,7 @@
                 </h3>
               </div>
               <div class="text">
-                <span>Com o orçamento de diversos profissionais, você pode analisar e negociar o serviço no melhor preço</span>
+                <span>Orçe com diversos profissionais, analise e feche o serviço no melhor preço</span>
               </div>
             </li>
           </ul>
