--- a/views/dashboard-tomador-pedido.ejs
+++ b/views/dashboard-tomador-pedido.ejs
@@ -71,9 +71,11 @@
                 <p>Na plataforma desde <%= prestador.data_inicio.split('-')[0] %>  </p>
                 <p><b>Serviço Prestado</b></p>
                 <span><%= servico.descricao_servico %> </span>
-                <p>
-                  Telefone: <b><%= prestador.telefone %> </b>
-                </p>      
+                <% if (pedido.status_id === 2) { %>
+                  <p>
+                    Chame no Whatsapp agora mesmo: <b><a href="https://api.whatsapp.com/send?phone=55<%= prestador.telefone %>"><%= prestador.telefone %></a> </b>
+                  </p>
+                <% } %>      
             </div>
           </div>
 
