--- a/views/cadastro-tomador-servico.ejs
+++ b/views/cadastro-tomador-servico.ejs
@@ -9,6 +9,13 @@
       <h3>
         Agora que você nos contou o que precisa, confirme seus dados para te conectarmos aos melhores profissionais 
       </h3>
+    <% if (typeof message !== "undefined" && message !== null) { %>
+        <div style="text-align: center;" class="alert alert-danger" role="alert">
+                         
+              <span><%= message %></span>
+                        
+        </div>
+    <% } %> 
       <% if (errors && typeof errors !== 'undefined') { %>
         <div class="alert alert-danger" role="alert">
           <div style="text-align: center; ">
