--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         <div class="servicos">
           <div class="servicos-descricao">
               <p>
-                Somos a nova startup para de contratação de serviços do Brasil. Conectamos Profissionais de todo o Brasil com pessoas solicitando serviço, atendendo com qualidade, facilidade e rapidez todos os tipos de necessidade.
+                Somos a nova startup para contratação de serviços do Brasil. Conectamos Profissionais de todo o Brasil com tomadores de serviço, atendendo com qualidade, facilidade e rapidez todos os tipos de necessidade.
               </p>
           </div>
           <div class="tipo-servicos">
