--- a/views/cadastro-tomador-servico.ejs
+++ b/views/cadastro-tomador-servico.ejs
@@ -30,24 +30,31 @@
           <form class="cadform" method="POST" action="/cadastro-tomador-servico">
             <div class="form-group">
               <input  class="form-control" type="text" id="nome" name="nome" placeholder="Nome"  maxlength="100" >
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
               <input class="form-control" type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  maxlength="100" >
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
               <input class="form-control" type="email" id="email" placeholder="E-mail" name="email"  maxlength="120" >
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
               <input class="form-control" type="text" id="cpf" placeholder="CPF" name="cpf" maxlength="11" >
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" id="endereco" placeholder="Rua Santo, Bairro Fulano, n 38, apt 301, Belo Horizonte, MG, cep 30140072" name="endereco" > 
+              <input class="form-control" type="text" id="endereco" placeholder="Rua Santo, Bairro Fulano, n 38, apt 301, Belo Horizonte, MG, cep 30140072" name="endereco" >
+              <span class="error-message"></span> 
             </div>
             <div class="form-group">
               <input class="form-control" type="password" id="senha" placeholder="Senha" name="senha"  maxlength="16" >
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
               <input class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" name="confsenha"  maxlength="16" >
+              <span class="error-message"></span>
             </div>
 
             <button type="submit" class="btn btn-enviar">Enviar</button>
