--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,12 +32,14 @@
                                                 <label for="email">Email:</label>
                                                 <input required type="email" class="form-control" id="email" size="40"
                                                     placeholder="E-mail" name="email">
+                                                    <span class="error-message"></span>
                                             </div>
                                             
                                             <div class="form-group">
                                                 <label for="senha">Senha:</label>
                                                 <input required type="password" class="form-control" id="senha"
                                                     placeholder="Senha" name="senha">
+                                                    <span class="error-message"></span>
                                             </div>
                                             <div>
                                                 <section id="botao">
@@ -59,12 +61,14 @@
                                                 <label for="email">Email:</label>
                                                 <input type="email" class="form-control" id="email" size="40"
                                                     placeholder="E-mail" name="email">
+                                                    <span class="error-message"></span>
                                             </div>
     
                                             <div class="form-group">
                                                 <label for="senha">Senha:</label>
                                                 <input type="password" class="form-control" id="senha"
                                                     placeholder="Senha" name="senha">
+                                                    <span class="error-message"></span>
                                             </div>
                                             <section id="botao">
                                                 <button class="b-login" type="submit" id="enviar">Enviar</button>
