--- a/views/minha-conta-tomador.ejs
+++ b/views/minha-conta-tomador.ejs
@@ -13,37 +13,45 @@
         <div style="text-align: center;" class="alert alert-danger" role="alert">            
           <span><%= message %></span>              
         </div>
-    <% } else { %>
+    <% } else if(typeof success !== "undefined" && success !== null) { %>
       <div style="text-align: center;" class="alert alert-success" role="alert">
-        Salvo com sucesso!
+        <%= success %>
       </div>
    <% } %> 
       <div class="formulario-cadastro">
         <div>
           <form method="POST" action="/minha-conta-tomador">
             <div class="form-group">
-              <input class="form-control" value="<%= usuario.nome %>" readonly type="text" id="nome" name="nome" placeholder="Nome"  required>
+              <input class="form-control" value="<%= usuario.nome %>" readonly type="text" id="nome" name="nome" placeholder="Nome">
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
-              <input class="form-control" value="<%= usuario.sobrenome %>" readonly type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome"  required>
+              <input class="form-control" value="<%= usuario.sobrenome %>" readonly type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome">
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
-              <input class="form-control" value="<%= usuario.email %>" type="email" id="email" placeholder="E-mail" name="email"  required>
+              <input class="form-control" value="<%= usuario.email %>" type="email" id="email" placeholder="E-mail" name="email">
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
-              <input class="form-control" value="<%= usuario.cpf %>" readonly type="text" id="cpf" placeholder="CPF" name="cpf"  required>
+              <input class="form-control" value="<%= usuario.cpf %>" readonly type="text" id="cpf" placeholder="CPF" name="cpf">
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
-              <input class="form-control" value="<%= usuario.endereco %>" type="text" id="endereco" placeholder="Rua Santo, Bairro Fulano, n 38, apt 301, Belo Horizonte, MG, cep 30140072" name="endereco"  required> 
+              <input class="form-control" value="<%= usuario.endereco %>" type="text" id="endereco" placeholder="Rua Santo, Bairro Fulano, n 38, apt 301, Belo Horizonte, MG, cep 30140072" name="endereco"> 
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
-              <input class="form-control" type="password" id="senha" placeholder="Senha" name="senha"  required>
+              <input class="form-control" type="password" id="senha" placeholder="Senha" name="senha">
+              <span class="error-message"></span>
             </div>
             <div class="form-group">
-              <input class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" name="confsenha"  required>
+              <input class="form-control" type="password" id="confsenha" placeholder="Confirme sua senha" name="confsenha">
+              <span class="error-message"></span>
             </div>
-
-            <button type="submit" class="btn btn-enviar">Enviar</button>
+            <div class="botao-enviar" style="display: flex; justify-content: center;">
+              <button style="border: 1px solid green; background-color: green; color: #fff; text-align: center;" type="submit" class="btn btn-enviar">Enviar</button>
+            </div>
             </form>
           </div>
           
